--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
